--- a/reference/frontend/package.json
+++ b/reference/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vercel": "^37.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
